organizando os primeiros arquivos em pastas e subpastas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Portfólio</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
 
         </section>
 
-        <img class="imagem-pb" src="/img/phb.png" alt="Imagem do Pedro Bernardes estilizo realista com fundo preto e olhando para um notebook">
+        <img class="imagem-pb" src="/assets/phb.png" alt="Imagem do Pedro Bernardes estilizo realista com fundo preto e olhando para um notebook">
 
     </main>
 
